crates/core/src/snapshots/marzano_core__test__warns_against_snippet_useless_rewrite.snap
---
source: apps/marzano/core/src/test.rs
expression: res
---
engine_id: None
file_name: Some("PlaygroundPattern")
level: Some(441)
message: "Warning: This is rewriting `export type {$types}` into the identical string `export type {$types}`, will have no effect."
position: Some(Position { line: 2, column: 5 })

